--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -20,5 +20,6 @@ and open the template in the editor.
         <h1>Shapes</h1>
             <a href="MathFun.html" class="btn btn-default" role="button">Math Surface Function</a>
             <a href="polyhedron.html" class="btn btn-default" role="button">Polyhedron</a>
+            <a href="Sphere.html" class="btn btn-default" role="button">Sphere</a>
         </body>
 </html>
