Adding partner names

--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -1,10 +1,9 @@
  
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+   Author:  Edward Angel
+   Modified by: Marietta E. Cameron, David Cable, Partner Justin Blankenship, Lucas Clark
+   Source: Modification from Code supplement to textbook-->
 <html>
     <head>
         <title>FINAL</title>
@@ -21,5 +20,6 @@ and open the template in the editor.
             <a href="MathFun.html" class="btn btn-default" role="button">Math Surface Function</a>
             <a href="polyhedron.html" class="btn btn-default" role="button">Polyhedron</a>
             <a href="Sphere.html" class="btn btn-default" role="button">Sphere</a>
+            <a href="MathFun2.html" class="btn btn-default" role="button">Math Function 2</a>
         </body>
 </html>
