--- a/CSCI346Final/Sphere.html
+++ b/CSCI346Final/Sphere.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <!--
    Author:  Edward Angel
-   Modified by: Marietta E. Cameron, David Cable, Partner Justin Blankenship, Lucas Clark
+   Modified by: Marietta E. Cameron, David Cable, Justin Blankenship, Lucas Clark
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
