--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -21,5 +21,6 @@
             <a href="polyhedron.html" class="btn btn-default" role="button">Polyhedron</a>
             <a href="Sphere.html" class="btn btn-default" role="button">Sphere</a>
             <a href="MathFun2.html" class="btn btn-default" role="button">Math Function 2</a>
+            <a href="FlappyBird.html" class="btn btn-default" role="button">Flappy What?</a>
         </body>
 </html>
