--- a/CSCI346Final/FlappyBird.html
+++ b/CSCI346Final/FlappyBird.html
@@ -7,7 +7,7 @@
    Source: Modification from Code supplement to textbook-->
 <html>
     <head>
-        <title>Math Function</title>
+        <title>Flappy Bird</title>
         
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
