Oval-Sphere Completed

--- a/CSCI346Final/MathFun.html
+++ b/CSCI346Final/MathFun.html
@@ -87,6 +87,7 @@ main()
             <button id= "xButton">Rotate X</button>
             <button id= "yButton">Rotate Y</button>
             <button id= "zButton">Rotate Z</button>
+            <button id = "Pause">Pause/Restart</button>
             <a href="index.html" class="btn btn-success" role="button">Go Back</a> 
             <h2 id = "stuff">f(x, y) = sin(x*y)</h2>
         </div>
