--- a/CSCI346Final/FlappyBird.html
+++ b/CSCI346Final/FlappyBird.html
@@ -87,6 +87,7 @@ main()
             <button id= "xButton">Rotate X</button>
             <button id= "yButton">Rotate Y</button>
             <button id= "zButton">Rotate Z</button>
+            <button id = "Pause">Pause/Restart</button>
             <a href="index.html" class="btn btn-success" role="button">Go Back</a> 
         </div>
        
