--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -22,5 +22,6 @@
             <a href="Sphere.html" class="btn btn-default" role="button">Sphere</a>
             <a href="MathFun2.html" class="btn btn-default" role="button">Math Function 2</a>
             <a href="FlappyBird.html" class="btn btn-default" role="button">Flappy What?</a>
+            <a href="AnotherFunction.html" class="btn btn-default" role="button">Another Function?!</a>
         </body>
 </html>
