--- a/CSCI346Final/cylinder.html
+++ b/CSCI346Final/cylinder.html
@@ -12,6 +12,10 @@
         <title>Justin's Tapered Cylinder</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script id="vertex-shader" type="x-shader/x-vertex">
 
 attribute  vec4 vPosition;
@@ -67,14 +71,13 @@ main()
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/initShaders.js"></script>
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/MV.js"></script>
         
-        <script type="text/javascript" src="examProgram.js"></script>
+        <script type="text/javascript" src="cylinder.js"></script>
 
 
     </head>
     <body onload="canvasMain()">
         <div>
-            <h1 style="color:blue;text-align:left">A Tapered Cylinder</h1>
-            <h3 style="color:orange;text-align:left">By Justin Blankenship</h3>
+            
             <canvas id="gl-canvas" width="512" height="512" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
