--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -23,5 +23,6 @@
             <a href="MathFun2.html" class="btn btn-default" role="button">Math Function 2</a>
             <a href="FlappyBird.html" class="btn btn-default" role="button">Flappy What?</a>
             <a href="AnotherFunction.html" class="btn btn-default" role="button">Another Function?!</a>
+            <a href="cylinder.html" class="btn btn-default" role="button">Cylinder</a>
         </body>
 </html>
