--- a/CSCI346Final/cylinder.html
+++ b/CSCI346Final/cylinder.html
@@ -9,7 +9,7 @@
 <html>
     <head>
         
-        <title>Justin's Tapered Cylinder</title>
+        <title>Cylinder</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -88,6 +88,7 @@ main()
             <button id= "zButton">Rotate Z</button>
             <button id= "pButton">Pause Rotation</button>
             <button id= "rButton">Resume Rotation</button>
+            <a href="index.html" class="btn btn-success" role="button">Go Back</a>
         </div>
        
     </body>
