--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -24,5 +24,6 @@
             <a href="FlappyBird.html" class="btn btn-default" role="button">Flappy What?</a>
             <a href="AnotherFunction.html" class="btn btn-default" role="button">Another Function?!</a>
             <a href="cylinder.html" class="btn btn-default" role="button">Cylinder</a>
+            <a href="cone.html" class="btn btn-default" role="button">Cone</a>
         </body>
 </html>
