Added some titles

--- a/CSCI346Final/cone.html
+++ b/CSCI346Final/cone.html
@@ -77,8 +77,16 @@ main()
     </head>
     <body onload="canvasMain()">
         <div>
+            <h1 style="font-size:50px;
+                       text-shadow: -1px -1px 0px #000,
+                       1px 1px 0px #000,
+                       2px 2px 0px #000,
+                       -2px -2px 0px #000;
+                       color:#FFA500;
+                       font-family:Verdana, Geneva, sans-serif;text-align:left"
+                       >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cone</h1>
             
-            <canvas id="gl-canvas" width="512" height="512" >
+            <canvas id="gl-canvas" width="450" height="450" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
