--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -26,5 +26,6 @@
             <a href="cylinder.html" class="btn btn-default" role="button">Cylinder</a>
             <a href="cone.html" class="btn btn-default" role="button">Cone</a>
             <a href="cube.html" class="btn btn-default" role="button">Truncated Cube</a>
+            <a href="mathfun3.html" class="btn btn-default" role="button">Math Function 3</a>
         </body>
 </html>
