--- a/CSCI346Final/cylinder.html
+++ b/CSCI346Final/cylinder.html
@@ -87,7 +87,10 @@ main()
                        font-family:Verdana, Geneva, sans-serif;text-align:left"
                        >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cylinder</h1>
             
-            <canvas id="gl-canvas" width="450" height="450" >
+            <h2 style="color:#FFA500;background-color: #000; margin-left: 110px; margin-right: 950px; padding-bottom: 4px; padding-            left: 8px; padding-right: 8px; padding-top: 10px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                       &#960;r<sup>2</sup></h2>
+            
+            <canvas id="gl-canvas" width="400" height="400" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
