--- a/CSCI346Final/cube.html
+++ b/CSCI346Final/cube.html
@@ -11,17 +11,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        
         <script id="vertex-shader" type="x-shader/x-vertex">
-
 attribute  vec4 vPosition;
 attribute  vec4 vColor;
 varying vec4 fColor;
-
 uniform vec3 theta;
-
 void main() 
 {
     // Compute the sines and cosines of theta for each of
@@ -29,35 +24,28 @@ void main()
     vec3 angles = radians( theta );
     vec3 c = cos( angles );
     vec3 s = sin( angles );
-
     // Remeber: thse matrices are column-major
     mat4 rx = mat4( 1.0,  0.0,  0.0, 0.0,
 		    0.0,  c.x,  s.x, 0.0,
 		    0.0, -s.x,  c.x, 0.0,
 		    0.0,  0.0,  0.0, 1.0 );
-
     mat4 ry = mat4( c.y, 0.0, -s.y, 0.0,
 		    0.0, 1.0,  0.0, 0.0,
 		    s.y, 0.0,  c.y, 0.0,
 		    0.0, 0.0,  0.0, 1.0 );
-
-
     mat4 rz = mat4( c.z, -s.z, 0.0, 0.0,
 		    s.z,  c.z, 0.0, 0.0,
 		    0.0,  0.0, 1.0, 0.0,
 		    0.0,  0.0, 0.0, 1.0 );
-
     fColor = vColor;
     gl_Position = rz * ry * rx * vPosition;
 } 
 </script>
 
 <script id="fragment-shader" type="x-shader/x-fragment">
-
 precision mediump float;
    
 varying vec4 fColor;
-
 void
 main()
 {
@@ -75,25 +63,20 @@ main()
     </head>
     <body onload="canvasMain()">
         <div>
-            <h1 style="font-size:50px;
-                       text-shadow: -1px -1px 0px #000,
-                       1px 1px 0px #000,
-                       2px 2px 0px #000,
-                       -2px -2px 0px #000;
-                       color:#FFA500;
-                       font-family:Verdana, Geneva, sans-serif;text-align:left"
-                       >Truncated Cube</h1>
+            <h1>Truncated Cube</h1>
             <canvas id="gl-canvas" width="400" height="400" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
         <div>
-            <button id= "xButton">Rotate X</button>
-            <button id= "yButton">Rotate Y</button>
-            <button id= "zButton">Rotate Z</button>
-            <button id= "pButton">Pause / Resume</button>
-            <a href="index.html" class="btn btn-success" role="button">Go Back</a>
+            <button class="btn" id= "xButton">Rotate X</button>
+            <button class="btn" id= "yButton">Rotate Y</button>
+            <button class="btn" id= "zButton">Rotate Z</button>
+            <button class="btn" id= "pButton">Pause / Resume</button>
+            <a href="index.html"><button  class="btn">Go Back</button></a>
         </div>
        
+    </body>
+</html>
     </body>
 </html>
