Renaming stuff/flappy bird colors

--- a/CSCI346Final/FlappyBird.html
+++ b/CSCI346Final/FlappyBird.html
@@ -78,6 +78,7 @@ main()
             
             <h1>Flappybird</h1>
             
+            <h4>Creator and Developer: Nguyễn Hà Đông (Dong Nguyen)</h4>
             <canvas id="gl-canvas" width="512" height="512" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
