--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -25,7 +25,7 @@
             <a href="cone.html"><button class="btn">Cone</button></a>
             <a href="Sphere.html"><button class="btn">Sphere</button></a>
             <a href="cylinder.html"><button class="btn">Cylinder</button></a>
-            <a href="polyhedron.html"><button class="btn">Polyhedron</button></a>
+            <a href="Deltoid.html"><button class="btn">Deltoid</button></a>
             <a href="cube.html"><button class="btn">Truncated Cube</button></a>
             <a href="FlappyBird.html"><button class="btn">Flappy What?</button></a>
         </div>
