--- a/CSCI346Final/AnotherFunction.html
+++ b/CSCI346Final/AnotherFunction.html
@@ -78,6 +78,7 @@ main()
         <div>
             
             <h1>Another Function</h1>
+            <h2>f(x, y) = sin(x<sup>2</sup>) + y<sup>2</sup>/(x<sup>2</sup>+y<sup>2</sup>)</h2>
             
             <canvas id="gl-canvas" width="512" height="512" >
                 oops ... your browser doesn't support the HTML5 canvas element
