--- a/CSCI346Final/MathFun2.html
+++ b/CSCI346Final/MathFun2.html
@@ -78,7 +78,7 @@ main()
         <div>
             
              <h1>Math Function 2</h1>
-            
+             <h2>f(x, y) = sin(x&middot;y)</h2>
             <canvas id="gl-canvas" width="512" height="512" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
