--- a/CSCI346Final/index.html
+++ b/CSCI346Final/index.html
@@ -22,8 +22,9 @@
             <a href="MathFun2.html"><button class="btn">Math Function 2</button></a>
             <a href="mathfun3.html"><button class="btn">Math Function 3</button></a>
             <a href="AnotherFunction.html"><button class="btn">Another Function?!</button></a>
+            <a href="Sphere.html"><button class="btn">Spherical</button></a>
+            <a href="Spherical2.html"><button class="btn">Spherical2</button></a>
             <a href="cone.html"><button class="btn">Cone</button></a>
-            <a href="Sphere.html"><button class="btn">Sphere</button></a>
             <a href="cylinder.html"><button class="btn">Cylinder</button></a>
             <a href="Deltoid.html"><button class="btn">Deltoid</button></a>
             <a href="cube.html"><button class="btn">Truncated Cube</button></a>
