--- a/CSCI346Final/mathfun3.html
+++ b/CSCI346Final/mathfun3.html
@@ -82,7 +82,7 @@ main()
             <h1>Math Function 3</h1>
             <br>
             
-            <h2>f(x,y) = e<sup>-a(x<sup>2</sup> + y<sup>2</sup>)</sup></h2>
+            <h2>f(x,z) = e<sup>(-x<sup>2</sup> - z<sup>2</sup>)</sup></h2>
             <canvas id="gl-canvas" width="400" height="400" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
