--- a/CSCI346Final/MathFun.html
+++ b/CSCI346Final/MathFun.html
@@ -79,7 +79,7 @@ main()
     <body onload="canvasMain()"> 
         
         <h1>Math Function 1</h1>
-        <h2>f(x, y) = sin(x<sup>2</sup>) &middot; cos(y<sup>2</sup>)</h2>
+        <h2>f(x, z) = sin(x<sup>2</sup>) &middot; cos(z<sup>2</sup>)</h2>
         
         <div>
             <canvas id="gl-canvas" width="512" height="512" >
