Minor Style Changes
Made sure added headers matched ect.

--- a/CSCI346Final/FlappyBird.html
+++ b/CSCI346Final/FlappyBird.html
@@ -74,16 +74,16 @@ main()
 
     </head>
     <body onload="canvasMain()"> 
-        <div>
+        <div class="left">
             
             <h1>Flappybird</h1>
             
-            <h4>Creator and Developer: Nguyễn Hà Đông (Dong Nguyen)</h4>
+            <h2>Creator and Developer:</br> Nguyễn Hà Đông (Dong Nguyen)</h2>
             <canvas id="gl-canvas" width="512" height="512" >
                 oops ... your browser doesn't support the HTML5 canvas element
             </canvas>            
         </div>
-        <div>
+        <div class="right">
             <button class="btn" id= "xButton">Rotate X</button>
             <button class="btn" id= "yButton">Rotate Y</button>
             <button class="btn" id= "zButton">Rotate Z</button>
