--- a/CSCI346Final/FlappyBird.html
+++ b/CSCI346Final/FlappyBird.html
@@ -69,7 +69,7 @@ main()
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/initShaders.js"></script>
         <script type="text/javascript" src="http://arden.cs.unca.edu/~cameron/Angel/SourceCode/Common/MV.js"></script>
         
-        <script type="text/javascript" src="flappybird.js"></script>
+        <script type="text/javascript" src="flappyBird.js"></script>
 
 
     </head>
